fixing gender fields default value

--- a/src/registration_form.html
+++ b/src/registration_form.html
@@ -37,7 +37,7 @@
 	<div class="row">
 		
 		<div class="col">
-			<input type="radio" id="Gender" name="Gender">
+			<input type="radio" id="Gender" name="Gender" checked>
 			<label>Male</label>
 
 			<input type="radio" id="Gender" name="Gender">
